SAK-17054 update reporting
git-svn-id: https://source.sakaiproject.org/svn/search/trunk@67377 66ffb92e-73f9-0310-93c1-f5514f145a0a