@@ -212,57 +212,147 @@
         </contributor>
 	</contributors>
     <!-- Reporting (mvn site) -->
-    <reporting>
-        <plugins>
-            <!-- JavaDocs: mvn javadoc:javadoc -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <source>1.5</source>
-                    <links>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
-                        <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <maxmemory>512m</maxmemory>
-                    <additionalJOption>
-                        -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
-          </additionalJOption>
-                </configuration>
-            </plugin>
-            <!-- FindBugs: mvn findbugs:findbugs -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>1.2</version>
-                <configuration>
-                    <findbugsXmlOutput>true</findbugsXmlOutput>
-                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-                    <xmlOutput>true</xmlOutput>
-                </configuration>
-            </plugin>
-            <!-- CheckStyle: mvn checkstyle:checkstyle -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <configuration>
-                    <outputFileFormat>xml</outputFileFormat>
-                </configuration>
-            </plugin>
-            <!-- Cobertura: mvn cobertura:cobertura -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
+ <reporting>
+	<plugins>
+		<!-- <plugin>
+			<groupId>com.xebia.mojo</groupId>
+			<artifactId>maven-dashboard-plugin</artifactId>
+			<configuration>
+				<reports>
+					<report>findbugs-maven-plugin</report>
+					<report>maven-cpd-plugin</report>
+					<report>taglist-maven-plugin</report>
+				</reports>
+			</configuration>
+		</plugin> -->
+		<plugin>
+			<artifactId>maven-jxr-plugin</artifactId>
+			<configuration>
+				<aggregate>true</aggregate>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>findbugs-maven-plugin</artifactId>
+			<version>2.0.1</version>
+			<configuration>
+				<findbugsXmlOutput>true</findbugsXmlOutput>
+				<xmlOutput>true</xmlOutput>
+				<effort>Max</effort>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-pmd-plugin</artifactId>
+			<configuration>
+				<xrefLocation>${project.reporting.outputDirectory}/../xref</xrefLocation> 
+				<sourceEncoding>utf-8</sourceEncoding>
+				<minimumTokens>20</minimumTokens>
+				<targetJdk>1.5</targetJdk>
+				<rulesets>
+					<ruleset>/rulesets/basic.xml</ruleset>
+					<ruleset>/rulesets/braces.xml</ruleset>
+					<ruleset>/rulesets/unusedcode.xml</ruleset>
+					<ruleset>/rulesets/clone.xml</ruleset>
+					<ruleset>/rulesets/codesize.xml</ruleset>
+					<ruleset>/rulesets/coupling.xml</ruleset>
+					<ruleset>/rulesets/design.xml</ruleset>
+					<ruleset>/rulesets/strictexception.xml</ruleset>
+					<ruleset>/rulesets/migrating.xml</ruleset>
+					<ruleset>/rulesets/junit.xml</ruleset>
+					<ruleset>/rulesets/strings.xml</ruleset>
+					<ruleset>/rulesets/javabeans.xml</ruleset>
+					<ruleset>/rulesets/finalizers.xml</ruleset>
+					<ruleset>/rulesets/optimizations.xml</ruleset>
+					<ruleset>/rulesets/j2ee.xml</ruleset>
+				</rulesets>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>taglist-maven-plugin</artifactId>
+			<configuration>
+				<tags>
+					<tag>TODO</tag>
+					<tag>todo</tag>
+					<tag>FIXME</tag>
+					<tag>fixme</tag>
+					<tag>Ignore</tag>
+					<tag>Deprecated</tag>
+				</tags>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-checkstyle-plugin</artifactId>
+			<configuration>
+				<configLocation> src/site/checkstyle.xml </configLocation>
+			</configuration>
+			<!-- <xrefLocation>${project.reporting.outputDirectory}/../xref</xrefLocation> -->
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>cobertura-maven-plugin</artifactId>
+			<version>2.2</version>
+			<configuration>
+				<formats>
+					<format>xml</format>
+					<format>html</format>
+				</formats>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+			<configuration>
+				<links>
+					<link> http://java.sun.com/j2se/1.5.0/docs/api </link>
+					<link> http://java.sun.com/products/servlet/2.3/javadoc/ </link>
+				</links>
+				<breakiterator>true</breakiterator>
+				<verbose>false</verbose>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>jxr-maven-plugin</artifactId>
+			<configuration>
+				<linkJavadoc>true</linkJavadoc>
+				<javadocDir>apidocs</javadocDir>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>jdepend-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-report-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>dashboard-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<artifactId>maven-changelog-plugin</artifactId>
+			<configuration>
+				<type>range</type>
+				<range>30</range>
+				<headingDateFormat>yyyy-MM-dd</headingDateFormat>
+				<aggregate>true</aggregate>
+			</configuration>
+		</plugin>
+	</plugins>
+</reporting>
+<build>
+	<pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>2.0</version>
+			</plugin>
+		</plugins>
+	</pluginManagement>
+</build>
 </project>
